# Minesweeper

./: CMakeLists.txt  README.md
src/: src.c
