cmake_minimum_required(VERSION 3.7)
project(Minysweepy)

set(CMAKE_C_STANDARD 11)
set(SDL2_INCLUDE_DIR /usr/include/SDL2)
set(SDL2_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2.so)
set(SDL2_mixer_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_mixer.so)
set(SDL2_ttf_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_ttf.so)
set(SDL2_image_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_image.so)
include_directories(${SDL2_INCLUDE_DIR})
set(SOURCE_FILES src/src.c)
add_executable(Minysweepy ${SOURCE_FILES})
target_link_libraries(Minysweepy ${SDL2_LIBRARY})
target_link_libraries(Minysweepy ${SDL2_mixer_LIBRARY})
target_link_libraries(Minysweepy ${SDL2_image_LIBRARY})
target_link_libraries(Minysweepy ${SDL2_ttf_LIBRARY})